6.7/api/Classes/classshapeworks_1_1GroomParameters.md
---
title: shapeworks::GroomParameters

---

# shapeworks::GroomParameters



 [More...](#detailed-description)


`#include <GroomParameters.h>`

## Public Classes

|                | Name           |
| -------------- | -------------- |
| struct | **[SharedBoundary](../Classes/structshapeworks_1_1GroomParameters_1_1SharedBoundary.md)**  |

## Public Types

|                | Name           |
| -------------- | -------------- |
| enum class| **[MeshSmoothingOption](../Classes/classshapeworks_1_1GroomParameters.md#enum-meshsmoothingoption)** { laplacian, sinc} |
| enum class| **[AlignmentOption](../Classes/classshapeworks_1_1GroomParameters.md#enum-alignmentoption)** { none, center, icp} |

## Public Functions

|                | Name           |
| -------------- | -------------- |
| | **[GroomParameters](../Classes/classshapeworks_1_1GroomParameters.md#function-groomparameters)**(ProjectHandle project, std::string domain_name ="") |
| void | **[set_domain_name](../Classes/classshapeworks_1_1GroomParameters.md#function-set-domain-name)**(std::string domain_name) |
| void | **[save_to_project](../Classes/classshapeworks_1_1GroomParameters.md#function-save-to-project)**() |
| std::string | **[get_groom_output_prefix](../Classes/classshapeworks_1_1GroomParameters.md#function-get-groom-output-prefix)**() |
| void | **[set_groom_output_prefix](../Classes/classshapeworks_1_1GroomParameters.md#function-set-groom-output-prefix)**(std::string prefix) |
| bool | **[get_groom_all_domains_the_same](../Classes/classshapeworks_1_1GroomParameters.md#function-get-groom-all-domains-the-same)**() |
| void | **[set_groom_all_domains_the_same](../Classes/classshapeworks_1_1GroomParameters.md#function-set-groom-all-domains-the-same)**(bool value) |
| bool | **[get_alignment_enabled](../Classes/classshapeworks_1_1GroomParameters.md#function-get-alignment-enabled)**() |
| void | **[set_alignment_enabled](../Classes/classshapeworks_1_1GroomParameters.md#function-set-alignment-enabled)**(bool value) |
| std::string | **[get_alignment_method](../Classes/classshapeworks_1_1GroomParameters.md#function-get-alignment-method)**() |
| void | **[set_alignment_method](../Classes/classshapeworks_1_1GroomParameters.md#function-set-alignment-method)**(std::string method) |
| int | **[get_alignment_reference](../Classes/classshapeworks_1_1GroomParameters.md#function-get-alignment-reference)**() |
| void | **[set_alignment_reference](../Classes/classshapeworks_1_1GroomParameters.md#function-set-alignment-reference)**(int reference) |
| int | **[get_alignment_reference_chosen](../Classes/classshapeworks_1_1GroomParameters.md#function-get-alignment-reference-chosen)**() |
| void | **[set_alignment_reference_chosen](../Classes/classshapeworks_1_1GroomParameters.md#function-set-alignment-reference-chosen)**(int reference) |
| int | **[get_alignment_subset_size](../Classes/classshapeworks_1_1GroomParameters.md#function-get-alignment-subset-size)**() |
| void | **[set_alignment_subset_size](../Classes/classshapeworks_1_1GroomParameters.md#function-set-alignment-subset-size)**(int size) |
| bool | **[get_isolate_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-isolate-tool)**() |
| void | **[set_isolate_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-isolate-tool)**(bool value) |
| bool | **[get_fill_holes_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-fill-holes-tool)**() |
| void | **[set_fill_holes_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-fill-holes-tool)**(bool value) |
| bool | **[get_fill_mesh_holes_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-fill-mesh-holes-tool)**() |
| void | **[set_fill_mesh_holes_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-fill-mesh-holes-tool)**(bool value) |
| bool | **[get_mesh_largest_component](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-largest-component)**() |
| void | **[set_mesh_largest_component](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-largest-component)**(bool value) |
| bool | **[get_auto_pad_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-auto-pad-tool)**() |
| void | **[set_auto_pad_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-auto-pad-tool)**(bool value) |
| int | **[get_padding_amount](../Classes/classshapeworks_1_1GroomParameters.md#function-get-padding-amount)**() |
| void | **[set_padding_amount](../Classes/classshapeworks_1_1GroomParameters.md#function-set-padding-amount)**(int padding_amount) |
| bool | **[get_antialias_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-antialias-tool)**() |
| void | **[set_antialias_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-antialias-tool)**(bool value) |
| int | **[get_antialias_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-get-antialias-iterations)**() |
| void | **[set_antialias_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-set-antialias-iterations)**(int iterations) |
| bool | **[get_blur_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-get-blur-tool)**() |
| void | **[set_blur_tool](../Classes/classshapeworks_1_1GroomParameters.md#function-set-blur-tool)**(bool value) |
| double | **[get_blur_amount](../Classes/classshapeworks_1_1GroomParameters.md#function-get-blur-amount)**() |
| void | **[set_blur_amount](../Classes/classshapeworks_1_1GroomParameters.md#function-set-blur-amount)**(double blur_amount) |
| bool | **[get_fast_marching](../Classes/classshapeworks_1_1GroomParameters.md#function-get-fast-marching)**() |
| void | **[set_fast_marching](../Classes/classshapeworks_1_1GroomParameters.md#function-set-fast-marching)**(bool value) |
| bool | **[get_mesh_smooth](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-smooth)**() |
| void | **[set_mesh_smooth](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-smooth)**(bool value) |
| std::string | **[get_mesh_smoothing_method](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-smoothing-method)**() |
| void | **[set_mesh_smoothing_method](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-smoothing-method)**(std::string method) |
| int | **[get_mesh_vtk_laplacian_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-vtk-laplacian-iterations)**() |
| void | **[set_mesh_vtk_laplacian_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-vtk-laplacian-iterations)**(int iterations) |
| double | **[get_mesh_vtk_laplacian_relaxation](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-vtk-laplacian-relaxation)**() |
| void | **[set_mesh_vtk_laplacian_relaxation](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-vtk-laplacian-relaxation)**(double relaxation) |
| int | **[get_mesh_vtk_windowed_sinc_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-vtk-windowed-sinc-iterations)**() |
| void | **[set_mesh_vtk_windowed_sinc_iterations](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-vtk-windowed-sinc-iterations)**(int iterations) |
| double | **[get_mesh_vtk_windowed_sinc_passband](../Classes/classshapeworks_1_1GroomParameters.md#function-get-mesh-vtk-windowed-sinc-passband)**() |
| void | **[set_mesh_vtk_windowed_sinc_passband](../Classes/classshapeworks_1_1GroomParameters.md#function-set-mesh-vtk-windowed-sinc-passband)**(double passband) |
| bool | **[get_use_icp](../Classes/classshapeworks_1_1GroomParameters.md#function-get-use-icp)**() |
| bool | **[get_use_center](../Classes/classshapeworks_1_1GroomParameters.md#function-get-use-center)**() |
| bool | **[get_use_landmarks](../Classes/classshapeworks_1_1GroomParameters.md#function-get-use-landmarks)**() |
| bool | **[get_crop](../Classes/classshapeworks_1_1GroomParameters.md#function-get-crop)**() |
| void | **[set_crop](../Classes/classshapeworks_1_1GroomParameters.md#function-set-crop)**(bool crop) |
| bool | **[get_convert_to_mesh](../Classes/classshapeworks_1_1GroomParameters.md#function-get-convert-to-mesh)**() |
| void | **[set_convert_to_mesh](../Classes/classshapeworks_1_1GroomParameters.md#function-set-convert-to-mesh)**(bool value) |
| bool | **[get_reflect](../Classes/classshapeworks_1_1GroomParameters.md#function-get-reflect)**() |
| void | **[set_reflect](../Classes/classshapeworks_1_1GroomParameters.md#function-set-reflect)**(bool reflect) |
| std::string | **[get_reflect_column](../Classes/classshapeworks_1_1GroomParameters.md#function-get-reflect-column)**() |
| void | **[set_reflect_column](../Classes/classshapeworks_1_1GroomParameters.md#function-set-reflect-column)**(std::string column) |
| std::string | **[get_reflect_choice](../Classes/classshapeworks_1_1GroomParameters.md#function-get-reflect-choice)**() |
| void | **[set_reflect_choice](../Classes/classshapeworks_1_1GroomParameters.md#function-set-reflect-choice)**(std::string choice) |
| std::string | **[get_reflect_axis](../Classes/classshapeworks_1_1GroomParameters.md#function-get-reflect-axis)**() |
| void | **[set_reflect_axis](../Classes/classshapeworks_1_1GroomParameters.md#function-set-reflect-axis)**(std::string axies) |
| bool | **[get_resample](../Classes/classshapeworks_1_1GroomParameters.md#function-get-resample)**() |
| void | **[set_resample](../Classes/classshapeworks_1_1GroomParameters.md#function-set-resample)**(bool resample) |
| bool | **[get_isotropic](../Classes/classshapeworks_1_1GroomParameters.md#function-get-isotropic)**() |
| void | **[set_isotropic](../Classes/classshapeworks_1_1GroomParameters.md#function-set-isotropic)**(bool isotropic) |
| double | **[get_iso_spacing](../Classes/classshapeworks_1_1GroomParameters.md#function-get-iso-spacing)**() |
| void | **[set_iso_spacing](../Classes/classshapeworks_1_1GroomParameters.md#function-set-iso-spacing)**(double spacing) |
| std::vector< double > | **[get_spacing](../Classes/classshapeworks_1_1GroomParameters.md#function-get-spacing)**() |
| void | **[set_spacing](../Classes/classshapeworks_1_1GroomParameters.md#function-set-spacing)**(std::vector< double > spacing) |
| bool | **[get_remesh](../Classes/classshapeworks_1_1GroomParameters.md#function-get-remesh)**() |
| void | **[set_remesh](../Classes/classshapeworks_1_1GroomParameters.md#function-set-remesh)**(bool remesh) |
| bool | **[get_remesh_percent_mode](../Classes/classshapeworks_1_1GroomParameters.md#function-get-remesh-percent-mode)**() |
| void | **[set_remesh_percent_mode](../Classes/classshapeworks_1_1GroomParameters.md#function-set-remesh-percent-mode)**(bool mode) |
| double | **[get_remesh_percent](../Classes/classshapeworks_1_1GroomParameters.md#function-get-remesh-percent)**() |
| void | **[set_remesh_percent](../Classes/classshapeworks_1_1GroomParameters.md#function-set-remesh-percent)**(double percent) |
| int | **[get_remesh_num_vertices](../Classes/classshapeworks_1_1GroomParameters.md#function-get-remesh-num-vertices)**() |
| void | **[set_remesh_num_vertices](../Classes/classshapeworks_1_1GroomParameters.md#function-set-remesh-num-vertices)**(int num_vertices) |
| double | **[get_remesh_gradation](../Classes/classshapeworks_1_1GroomParameters.md#function-get-remesh-gradation)**() |
| void | **[set_remesh_gradation](../Classes/classshapeworks_1_1GroomParameters.md#function-set-remesh-gradation)**(double gradation) |
| bool | **[get_skip_grooming](../Classes/classshapeworks_1_1GroomParameters.md#function-get-skip-grooming)**() |
| void | **[set_skip_grooming](../Classes/classshapeworks_1_1GroomParameters.md#function-set-skip-grooming)**(bool skip) |
| bool | **[get_shared_boundaries_enabled](../Classes/classshapeworks_1_1GroomParameters.md#function-get-shared-boundaries-enabled)**() |
| void | **[set_shared_boundaries_enabled](../Classes/classshapeworks_1_1GroomParameters.md#function-set-shared-boundaries-enabled)**(bool enabled) |
| std::vector< [SharedBoundary](../Classes/structshapeworks_1_1GroomParameters_1_1SharedBoundary.md) > | **[get_shared_boundaries](../Classes/classshapeworks_1_1GroomParameters.md#function-get-shared-boundaries)**() |
| void | **[set_shared_boundaries](../Classes/classshapeworks_1_1GroomParameters.md#function-set-shared-boundaries)**(const std::vector< [SharedBoundary](../Classes/structshapeworks_1_1GroomParameters_1_1SharedBoundary.md) > & boundaries) |
| void | **[add_shared_boundary](../Classes/classshapeworks_1_1GroomParameters.md#function-add-shared-boundary)**(const std::string & first_domain, const std::string & second_domain, double tolerance) |
| void | **[remove_shared_boundary](../Classes/classshapeworks_1_1GroomParameters.md#function-remove-shared-boundary)**(size_t index) |
| void | **[clear_shared_boundaries](../Classes/classshapeworks_1_1GroomParameters.md#function-clear-shared-boundaries)**() |
| void | **[restore_defaults](../Classes/classshapeworks_1_1GroomParameters.md#function-restore-defaults)**() |
| [Parameters](../Classes/classshapeworks_1_1Parameters.md) | **[get_parameters](../Classes/classshapeworks_1_1GroomParameters.md#function-get-parameters)**() const |

## Public Attributes

|                | Name           |
| -------------- | -------------- |
| const std::string | **[GROOM_SMOOTH_VTK_LAPLACIAN_C](../Classes/classshapeworks_1_1GroomParameters.md#variable-groom-smooth-vtk-laplacian-c)**  |
| const std::string | **[GROOM_SMOOTH_VTK_WINDOWED_SINC_C](../Classes/classshapeworks_1_1GroomParameters.md#variable-groom-smooth-vtk-windowed-sinc-c)**  |
| const std::string | **[GROOM_ALIGNMENT_CENTER_C](../Classes/classshapeworks_1_1GroomParameters.md#variable-groom-alignment-center-c)**  |
| const std::string | **[GROOM_ALIGNMENT_ICP_C](../Classes/classshapeworks_1_1GroomParameters.md#variable-groom-alignment-icp-c)**  |
| const std::string | **[GROOM_ALIGNMENT_LANDMARK_C](../Classes/classshapeworks_1_1GroomParameters.md#variable-groom-alignment-landmark-c)**  |

## Detailed Description

```cpp
class shapeworks::GroomParameters;
```


This class encapsulated processing of [Groom](../Classes/classshapeworks_1_1Groom.md) parameters 

## Public Types Documentation

### enum MeshSmoothingOption

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| laplacian | |   |
| sinc | |   |




### enum AlignmentOption

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| none | |   |
| center | |   |
| icp | |   |




## Public Functions Documentation

### function GroomParameters

```cpp
explicit GroomParameters(
    ProjectHandle project,
    std::string domain_name =""
)
```


### function set_domain_name

```cpp
void set_domain_name(
    std::string domain_name
)
```


### function save_to_project

```cpp
void save_to_project()
```


### function get_groom_output_prefix

```cpp
std::string get_groom_output_prefix()
```


### function set_groom_output_prefix

```cpp
void set_groom_output_prefix(
    std::string prefix
)
```


### function get_groom_all_domains_the_same

```cpp
bool get_groom_all_domains_the_same()
```


### function set_groom_all_domains_the_same

```cpp
void set_groom_all_domains_the_same(
    bool value
)
```


### function get_alignment_enabled

```cpp
bool get_alignment_enabled()
```


### function set_alignment_enabled

```cpp
void set_alignment_enabled(
    bool value
)
```


### function get_alignment_method

```cpp
std::string get_alignment_method()
```


### function set_alignment_method

```cpp
void set_alignment_method(
    std::string method
)
```


### function get_alignment_reference

```cpp
int get_alignment_reference()
```


### function set_alignment_reference

```cpp
void set_alignment_reference(
    int reference
)
```


### function get_alignment_reference_chosen

```cpp
int get_alignment_reference_chosen()
```


### function set_alignment_reference_chosen

```cpp
void set_alignment_reference_chosen(
    int reference
)
```


### function get_alignment_subset_size

```cpp
int get_alignment_subset_size()
```


### function set_alignment_subset_size

```cpp
void set_alignment_subset_size(
    int size
)
```


### function get_isolate_tool

```cpp
bool get_isolate_tool()
```


### function set_isolate_tool

```cpp
void set_isolate_tool(
    bool value
)
```


### function get_fill_holes_tool

```cpp
bool get_fill_holes_tool()
```


### function set_fill_holes_tool

```cpp
void set_fill_holes_tool(
    bool value
)
```


### function get_fill_mesh_holes_tool

```cpp
bool get_fill_mesh_holes_tool()
```


### function set_fill_mesh_holes_tool

```cpp
void set_fill_mesh_holes_tool(
    bool value
)
```


### function get_mesh_largest_component

```cpp
bool get_mesh_largest_component()
```


### function set_mesh_largest_component

```cpp
void set_mesh_largest_component(
    bool value
)
```


### function get_auto_pad_tool

```cpp
bool get_auto_pad_tool()
```


### function set_auto_pad_tool

```cpp
void set_auto_pad_tool(
    bool value
)
```


### function get_padding_amount

```cpp
int get_padding_amount()
```


### function set_padding_amount

```cpp
void set_padding_amount(
    int padding_amount
)
```


### function get_antialias_tool

```cpp
bool get_antialias_tool()
```


### function set_antialias_tool

```cpp
void set_antialias_tool(
    bool value
)
```


### function get_antialias_iterations

```cpp
int get_antialias_iterations()
```


### function set_antialias_iterations

```cpp
void set_antialias_iterations(
    int iterations
)
```


### function get_blur_tool

```cpp
bool get_blur_tool()
```


### function set_blur_tool

```cpp
void set_blur_tool(
    bool value
)
```


### function get_blur_amount

```cpp
double get_blur_amount()
```


### function set_blur_amount

```cpp
void set_blur_amount(
    double blur_amount
)
```


### function get_fast_marching

```cpp
bool get_fast_marching()
```


### function set_fast_marching

```cpp
void set_fast_marching(
    bool value
)
```


### function get_mesh_smooth

```cpp
bool get_mesh_smooth()
```


### function set_mesh_smooth

```cpp
void set_mesh_smooth(
    bool value
)
```


### function get_mesh_smoothing_method

```cpp
std::string get_mesh_smoothing_method()
```


### function set_mesh_smoothing_method

```cpp
void set_mesh_smoothing_method(
    std::string method
)
```


### function get_mesh_vtk_laplacian_iterations

```cpp
int get_mesh_vtk_laplacian_iterations()
```


### function set_mesh_vtk_laplacian_iterations

```cpp
void set_mesh_vtk_laplacian_iterations(
    int iterations
)
```


### function get_mesh_vtk_laplacian_relaxation

```cpp
double get_mesh_vtk_laplacian_relaxation()
```


### function set_mesh_vtk_laplacian_relaxation

```cpp
void set_mesh_vtk_laplacian_relaxation(
    double relaxation
)
```


### function get_mesh_vtk_windowed_sinc_iterations

```cpp
int get_mesh_vtk_windowed_sinc_iterations()
```


### function set_mesh_vtk_windowed_sinc_iterations

```cpp
void set_mesh_vtk_windowed_sinc_iterations(
    int iterations
)
```


### function get_mesh_vtk_windowed_sinc_passband

```cpp
double get_mesh_vtk_windowed_sinc_passband()
```


### function set_mesh_vtk_windowed_sinc_passband

```cpp
void set_mesh_vtk_windowed_sinc_passband(
    double passband
)
```


### function get_use_icp

```cpp
bool get_use_icp()
```


### function get_use_center

```cpp
bool get_use_center()
```


### function get_use_landmarks

```cpp
bool get_use_landmarks()
```


### function get_crop

```cpp
bool get_crop()
```


### function set_crop

```cpp
void set_crop(
    bool crop
)
```


### function get_convert_to_mesh

```cpp
bool get_convert_to_mesh()
```


### function set_convert_to_mesh

```cpp
void set_convert_to_mesh(
    bool value
)
```


### function get_reflect

```cpp
bool get_reflect()
```


### function set_reflect

```cpp
void set_reflect(
    bool reflect
)
```


### function get_reflect_column

```cpp
std::string get_reflect_column()
```


### function set_reflect_column

```cpp
void set_reflect_column(
    std::string column
)
```


### function get_reflect_choice

```cpp
std::string get_reflect_choice()
```


### function set_reflect_choice

```cpp
void set_reflect_choice(
    std::string choice
)
```


### function get_reflect_axis

```cpp
std::string get_reflect_axis()
```


### function set_reflect_axis

```cpp
void set_reflect_axis(
    std::string axies
)
```


### function get_resample

```cpp
bool get_resample()
```


### function set_resample

```cpp
void set_resample(
    bool resample
)
```


### function get_isotropic

```cpp
bool get_isotropic()
```


### function set_isotropic

```cpp
void set_isotropic(
    bool isotropic
)
```


### function get_iso_spacing

```cpp
double get_iso_spacing()
```


### function set_iso_spacing

```cpp
void set_iso_spacing(
    double spacing
)
```


### function get_spacing

```cpp
std::vector< double > get_spacing()
```


### function set_spacing

```cpp
void set_spacing(
    std::vector< double > spacing
)
```


### function get_remesh

```cpp
bool get_remesh()
```


### function set_remesh

```cpp
void set_remesh(
    bool remesh
)
```


### function get_remesh_percent_mode

```cpp
bool get_remesh_percent_mode()
```


### function set_remesh_percent_mode

```cpp
void set_remesh_percent_mode(
    bool mode
)
```


### function get_remesh_percent

```cpp
double get_remesh_percent()
```


### function set_remesh_percent

```cpp
void set_remesh_percent(
    double percent
)
```


### function get_remesh_num_vertices

```cpp
int get_remesh_num_vertices()
```


### function set_remesh_num_vertices

```cpp
void set_remesh_num_vertices(
    int num_vertices
)
```


### function get_remesh_gradation

```cpp
double get_remesh_gradation()
```


### function set_remesh_gradation

```cpp
void set_remesh_gradation(
    double gradation
)
```


### function get_skip_grooming

```cpp
bool get_skip_grooming()
```


### function set_skip_grooming

```cpp
void set_skip_grooming(
    bool skip
)
```


### function get_shared_boundaries_enabled

```cpp
bool get_shared_boundaries_enabled()
```


### function set_shared_boundaries_enabled

```cpp
void set_shared_boundaries_enabled(
    bool enabled
)
```


### function get_shared_boundaries

```cpp
std::vector< SharedBoundary > get_shared_boundaries()
```


### function set_shared_boundaries

```cpp
void set_shared_boundaries(
    const std::vector< SharedBoundary > & boundaries
)
```


### function add_shared_boundary

```cpp
void add_shared_boundary(
    const std::string & first_domain,
    const std::string & second_domain,
    double tolerance
)
```


### function remove_shared_boundary

```cpp
void remove_shared_boundary(
    size_t index
)
```


### function clear_shared_boundaries

```cpp
void clear_shared_boundaries()
```


### function restore_defaults

```cpp
void restore_defaults()
```


### function get_parameters

```cpp
inline Parameters get_parameters() const
```


## Public Attributes Documentation

### variable GROOM_SMOOTH_VTK_LAPLACIAN_C

```cpp
static const std::string GROOM_SMOOTH_VTK_LAPLACIAN_C;
```


### variable GROOM_SMOOTH_VTK_WINDOWED_SINC_C

```cpp
static const std::string GROOM_SMOOTH_VTK_WINDOWED_SINC_C;
```


### variable GROOM_ALIGNMENT_CENTER_C

```cpp
static const std::string GROOM_ALIGNMENT_CENTER_C;
```


### variable GROOM_ALIGNMENT_ICP_C

```cpp
static const std::string GROOM_ALIGNMENT_ICP_C;
```


### variable GROOM_ALIGNMENT_LANDMARK_C

```cpp
static const std::string GROOM_ALIGNMENT_LANDMARK_C;
```


-------------------------------

Updated on 2025-10-11 at 18:16:33 +0000